ext/dtls/gstdtlsdec.c
@@ -380,15 +380,13 @@ gst_dtls_dec_release_pad (GstElement * element, GstPad * pad)
   g_return_if_fail (self->src == pad);
 
   g_mutex_lock (&self->src_mutex);
-  gst_object_unref (self->src);
+
   self->src = NULL;
   g_mutex_unlock (&self->src_mutex);
 
-  gst_element_remove_pad (element, pad);
-
   GST_DEBUG_OBJECT (self, "releasing src pad");
 
-  GST_ELEMENT_GET_CLASS (element)->release_pad (element, pad);
+  gst_element_remove_pad (element, pad);
 }
 
 static void
